--- a/Ejercicios/Ejercicio1/nbproject/project.properties
+++ b/Ejercicios/Ejercicio1/nbproject/project.properties
@@ -24,13 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Ejercicio2.jar
+dist.jar=${dist.dir}/Ejercicio1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
