--- a/Ejercicios/Ejercicio2/nbproject/private/private.properties
+++ b/Ejercicios/Ejercicio2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/ricardotg/snap/netbeans/common/data/11.1/build.properties
+user.properties.file=C:\\Users\\navi_\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
