--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Practicas/Practica 3/BDServer/nbproject/private/
+/Practicas/Practica 3/WebServicesRoles/nbproject/private/
+/Practicas/Practica 3/WebServicesRoles/build/
+/Practicas/Practica 3/Demo/nbproject/private/
+/Practicas/Practica 3/Demo/build/
