--- a/Ejercicios/Ejercicio REST/ArticuloDesktop/nbproject/project.properties
+++ b/Ejercicios/Ejercicio REST/ArticuloDesktop/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ArticuloDesktop
 excludes=
 file.reference.javax.json-1.1.jar=jar_files/javax.json-1.1.jar
+file.reference.javax.json-1.1.jar-1=C:\\Users\\MAYRA\\Downloads\\PROGRAMAS\\javax.json-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
     ${libs.EclipseLink-GlassFish-v3.classpath}:\
-    ${file.reference.javax.json-1.1.jar}
+    ${file.reference.javax.json-1.1.jar}:\
+    ${file.reference.javax.json-1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
